# audio-transcriber

./: .bumpversion.cfg  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vulture_ignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  docker-compose.personaplex.yaml  index.html  mcp.compose.yml  mcp_config.json  mkdocs.yml  output.json  output.srt  output.vtt  personaplex.Dockerfile  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.specify/reports/: code_enhancement_report.md
.specify/specs/code-enhancement-20260512/: CHECKLIST.md  DRIFT_REPORT.md  spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260522/: spec.json  spec.md  tasks.json  tasks.md
.specify/specs/code-enhancement-20260524/: spec.json  spec.md  tasks.json  tasks.md
audio_transcriber/: __init__.py  __main__.py  agent.py  agent_server.py  audio_transcriber.py  audio_transcriber_a2a.py  audio_transcriber_agent.py  audio_transcriber_mcp.py  mcp.py  mcp_config.json  mcp_server.py  personaplex_client.py  tools.py  utils.py  version.py
audio_transcriber/agent/: IDENTITY.md
audio_transcriber/agent_data/: HEARTBEAT.md  IDENTITY.md  MCP_AGENTS.md  NODE_AGENTS.md  knowledge_graph.db  knowledge_graph.db.wal  mcp_config.json  templates.py
audio_transcriber/mcp/: __init__.py  mcp_audio_processing.py  mcp_misc.py
audio_transcriber/prompts/: main_agent.json
audio_transcriber/skills/audio-starter/: SKILL.md
audio_transcriber/skills/audio-transcriber-audio-processing/: SKILL.md
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  docker-compose.personaplex.yaml  mcp.compose.yml  personaplex.Dockerfile
docs/: concepts.md  deployment.md  index.md  installation.md  legacy_readme.md  overview.md  usage.md
installation/: index.html
legacy_readme/: index.html
overview/: index.html
scripts/: test_personaplex_connection.py
search/: search_index.json
tests/: conftest.py  test_agent_server.py  test_audio_transcriber_brute_force_coverage.py  test_concept_parity.py  test_init_coverage.py  test_init_dynamics.py  test_mcp_server.py  test_transcriber_extra.py  test_websocket_extra.py
usage/: index.html
