[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcriber"
version = "0.5.74"
description = "Transcribe your .wav .mp4 .mp3 .flac files to text or record your own audio!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0.0b1",
    "pyaudio>=0.2.14",
    "openai-whisper>=20250625",
    "setuptools-rust>=1.12.0"
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=3.0.0b1",
    "eunomia-mcp>=0.3.10",
    "fastapi>=0.128.0"
]

a2a = [
    "pydantic-ai-slim[fastmcp,openai,anthropic,google,huggingface,a2a,ag-ui,web]>=1.32.0",
    "pydantic-ai-skills",
    "fastapi>=0.128.0"
]

all = [
    "fastmcp>=2.13.0.2",
    "eunomia-mcp>=0.3.10",
    "pydantic-ai-slim[fastmcp,openai,anthropic,google,huggingface,a2a,ag-ui,web]>=1.32.0",
    "pydantic-ai-skills",
    "fastapi>=0.128.0"
]

[project.scripts]
audio-transcriber = "audio_transcriber.audio_transcriber:audio_transcriber"
audio-transcriber-mcp = "audio_transcriber.audio_transcriber_mcp:audio_transcriber_mcp"
audio-transcriber-agent = "audio_transcriber.audio_transcriber_agent:agent_server"

[tool.setuptools.package-data]
audio_transcriber = ["mcp_config.json", "skills/**"]

[tool.setuptools.packages.find]
where = ["."]
