[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-transcriber"
version = "0.6.20"
description = "Transcribe your .wav .mp4 .mp3 .flac files to text or record your own audio!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "agent-utilities>=0.2.6",
    "pyaudio>=0.2.14",
    "faster-whisper>=1.2.1",
    "setuptools-rust>=1.12.0",
]

[project.optional-dependencies]
local = [
    "openai-whisper>=20250625",
]

mcp = [
    "agent-utilities[mcp]>=0.2.6",
    "websockets>=13.0"
]

agent = [
    "agent-utilities[agent,logfire]>=0.2.6",
    "websockets>=13.0"
]

all = [
    "audio-transcriber[mcp,agent]>=0.6.15"
]

[project.scripts]
audio-transcriber = "audio_transcriber.audio_transcriber:audio_transcriber"
audio-transcriber-mcp = "audio_transcriber.mcp:mcp_server"
audio-transcriber-agent = "audio_transcriber.agent:agent_server"

[tool.setuptools.package-data]
audio_transcriber = [ "mcp_config.json", "skills/**", "agent/**",]

[tool.setuptools.packages.find]
where = ["."]
